--- a/index.html
+++ b/index.html
@@ -11,11 +11,20 @@
 
 <body>
     <nav>
+        <ion-icon name="menu-outline" class="menu-outline">
+            <a href="#home">home</a>
+            <a href="#about">about</a>
+            <a href="#products">products</a>
+            <a href="#contacts">contacts</a>
+        </ion-icon>
         <a href="#home">home</a>
         <a href="#about">about</a>
         <a href="#products">products</a>
         <a href="#contacts">contacts</a>
     </nav>
+
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
     <script src="lib/jquery-3.7.1.min.js">
     </script>
     <script src="app/app.js"></script>
