--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
 
 <body>
     <nav>
-        <ion-icon name="menu-outline" class="menu-outline">
+        <input type="checkbox" id="menu-toggle" />
+        <label for="menu-toggle" id="menu-icon">
+            <ion-icon name="reorder-three-outline"></ion-icon>
+        </label>
+        <div id="nav-links">
             <a href="#home">home</a>
             <a href="#about">about</a>
             <a href="#products">products</a>
             <a href="#contacts">contacts</a>
-        </ion-icon>
-        <a href="#home">home</a>
-        <a href="#about">about</a>
-        <a href="#products">products</a>
-        <a href="#contacts">contacts</a>
+        </div>
     </nav>
 
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
