--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
         <a href="#contacts">contacts</a>
     </nav>
 
+    <div class="mainContent">
+        <h1>text</h1>
+    </div>
+
+
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
     <script src="lib/jquery-3.7.1.min.js">
