--- a/index.html
+++ b/index.html
@@ -23,12 +23,14 @@
         </div>
     </nav>
 
-
+    <div id="app"></div>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
     <script src="lib/jquery-3.7.1.min.js">
     </script>
-    <script src="app/app.js"></script>
+
+    <script type="module" src="app/app.js"></script>
+    <script type="module" src="model/model.js"></script>
 </body>
 
 </html>
