--- a/pages/home.html
+++ b/pages/home.html
@@ -1,3 +1,26 @@
 <div class="mainContent">
-    <h1>text</h1>
+    <div class="search">
+        <p>Where do you want to go?</p>
+    </div>
+</div>
+
+<div class="popular">
+    <div class="boxes">
+        <div class="box1">
+            <p class="p1">ATHENS GRECE</p>
+            <img src="assets/download (1).jpg" alt="">
+            <div class="button">BOOK NOW</div>
+        </div>
+        <div class="box2">
+            <p class="p2">PARIS FRANCE</p>
+            <img src="assets/download.jpg" alt="">
+            <div class="button">BOOK NOW</div>
+        </div>
+        <div class="box3">
+            <p class="p3">MADRID SPAIN</p>
+            <img src="assets/spain.jpg" alt="">
+            <div class="button">BOOK NOW</div>
+        </div>
+
+    </div>
 </div>
