about page pushed

--- a/pages/about.html
+++ b/pages/about.html
@@ -1,1 +1,46 @@
-<div class="baseline">hi this is a test</div>
+<div class="about-wrapper">
+
+    <div class="about-banner">
+        <div class="banner-header">
+            <h2>About Us</h2>
+            <h3>learn about your getaway flights...</h3>
+        </div>
+
+    </div>
+    <div class="text-content-box">
+        <div class="content-one">
+            <div class="cotent-one-text">
+                <h2 class="content-h2-headers">Travel is Incredible</h2>
+                <p class="content-p-text">Travel opens doors to new experiences, cultures, and perspectives that enrich
+                    your life. With us,
+                    every journey is more than just getting from point A to point B—it's about creating unforgettable
+                    memories. From the moment you book your flight, we ensure comfort, convenience, and a seamless
+                    experience, so you can focus on the excitement of your next adventure.
+
+                    Our extensive network of destinations allows you to explore the world your way, whether you're
+                    seeking a relaxing getaway, an exciting city break, or a remote destination off the beaten path.
+                    Plus, with our exceptional customer service and attention to detail, you can trust that every trip
+                    will be smooth, safe, and tailored to your needs.</p>
+            </div>
+
+        </div>
+        <div class="content-two">
+            <div class="content-two-text">
+                <h2 class="content-h2-headers">We Keep It That Way</h2>
+                <p class="content-p-text">At the core of everything we do is our commitment to making travel simple,
+                    enjoyable, and
+                    stress-free—and we work hard to keep it that way. From offering flexible booking options to
+                    providing excellent in-flight services, we ensure that your travel experience remains seamless every
+                    step of the way.
+
+                    Our focus is on maintaining the highest standards of safety, comfort, and reliability, so you can
+                    always trust us to deliver. Whether it's through regular updates to our fleet, top-notch customer
+                    care, or easy-to-use online tools, we’re always improving to keep your journeys hassle-free and
+                    extraordinary.
+
+                    With us, travel remains as incredible as it should be—and we’ll keep it that way.</p>
+            </div>
+
+        </div>
+    </div>
+</div>
