flights page created

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             <a href="#about">about</a>
             <a href="#products">products</a>
             <a href="#contacts">contacts</a>
+            <a href="#flights">flights</a>
         </div>
     </nav>
 
