flights file create and completed

--- a/pages/flights.html
+++ b/pages/flights.html
@@ -1,9 +1,11 @@
-<div class="banner-header"></div>
-<h2>Contact Us</h2>
-<h3>We would like to hear from you!</h3>
+<div class="banner-header-flights">
+    <div class="header-text-wrap">
+        <h1 id="flights-header-text">Flight Destination</h1>
+    </div>
+
 </div>
 <div class="flight-search">
-    <h2>Search for Flights</h2>
+    <h2>Search Flights</h2>
     <div class="form-group">
         <label for="destination">Destination:</label>
         <input type="text" id="destination" name="destination" placeholder="Enter a destination...">
