css animation test

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
             <a href="#about">about</a>
             <a href="#contacts">contacts</a>
             <a href="#flights">flights</a>
+            <a href="#test">flights</a>
+
         </div>
     </nav>
 
